--- a/app/src/main/res/layout/fragment_edit_post.xml
+++ b/app/src/main/res/layout/fragment_edit_post.xml
@@ -25,7 +25,6 @@
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:layout_marginTop="32dp"
-            android:src="@drawable/sunset"
             app:civ_border_color="#000"
             app:civ_border_width="1dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -81,6 +80,16 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/save"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/edit_post_progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/scrollView"
         app:layout_constraintTop_toTopOf="parent" />
 
 
