--- a/app/src/main/res/layout/post_row.xml
+++ b/app/src/main/res/layout/post_row.xml
@@ -12,7 +12,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/sunset"
+        android:src="@drawable/profile"
         app:civ_border_color="#000"
         app:civ_border_width="1dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,8 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/post_profile_image"
-        app:srcCompat="@drawable/sunset" />
+        app:layout_constraintTop_toBottomOf="@+id/post_profile_image" />
 
     <TextView
         android:id="@+id/post_username"
