--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -12,7 +12,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/sunset"
+        android:src="@drawable/profile"
         app:civ_border_color="#000"
         app:civ_border_width="1dp"
         app:layout_constraintStart_toStartOf="parent"
